1999-01-16  Marcus G. Daniels  <mgd@chama.santafe.edu>

	* internal.m: Use raiseEvent macro instead of method throughout.
	(tkobjc_pixmap_update_raster): Move call to XpmCreatePixmapFromXpmImage
	from tkobjc_pixmap_create.  Set colormap in xpmattrs.  If need be
	create a private colormap and retry.

	* internal.h: Protect String, Widget, and Object symbols.

1999-01-15  Marcus G. Daniels  <mgd@chama.santafe.edu>

	* internal.m (tkobjc_raster_setColormap): Loop until
	Tk_DoOneEvent goes false.

1999-01-10  Marcus G. Daniels  <mgd@chama.santafe.edu>

	* WindowGeometryRecord.[hm] ([WindowGeometryRecord -lispOut:deep:]):
	Add deep: option.

	* ArchivedGeometryWidget.m ([ArchivedGeometryWidget
	-updateArchiver]): Pass (new) deep-serialize option to
	lispArchiverPut.

1999-01-08  Marcus G. Daniels  <mgd@chama.santafe.edu>

	* WindowGeometryRecord.m ([WindowGeometryRecord -lispOut:]): Use
	MAKE_INSTANCE_FUNCTION_NAME instead of MAKE_OBJC_FUNCTION_NAME.

1999-01-06  Marcus G. Daniels  <mgd@chama.santafe.edu>

	* Widget.m ([Widget -setParent:]): Check for nil, not 0.
	([Widget -createEnd]): Set shellFrameFlag if parent is nil.
	([Widget -drop]): Use shellFrameFlag to determine if parent
	should be dropped.

	* Widget.h (Widget): New flag shellFrameFlag.

	* Histogram.m ([Histogram +createBegin:]): Initialize numBins
	to 0 instead of -1.
	([Histogram -createEnd]): Make i unsigned.
	([Histogram -setLabels:count:], [Histogram -setColors:count:]):
	Modulus index by {label,color}Count.  Don't check for
	entry of NULL.
	([Histogram -drawHistogramWithInt:], 
	[Histogram -drawHistogramWithDouble:],
	[Histogram -drawHistogramWithInt:atLocations:],
	[Histogram -drawHistogramWithDouble:points:locations]): 
	Make i unsigned.

	* Histogram.h (Histogram): Make numBins unsigned. 

	* Histogram.[hm]: Add count argument to setLabels and setColors.

1998-12-31  Marcus G. Daniels  <mgd@chama.santafe.edu>

	* Widget.m ([Widget -drop]): Handle widgets which had shell
	Frames at create time.
